# subsurface-tauri

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  FUTURE.md  README.md  dc-download-harness.html  index.html  package-lock.json  package.json  playwright.config.ts  prefs.html  toolbar-harness.html  tsconfig.app.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
.github/workflows/: ci.yml  codeql.yml  release.yml  update-snapshots.yml
docs/superpowers/plans/: 2026-06-18-github-actions-workflows.md
docs/superpowers/specs/: 2026-06-18-github-actions-workflow-design.md  2026-06-20-cloud-notebook-design.md  2026-06-29-dc-download-logging-design.md  2026-07-10-units-preference-design.md
scripts/: update-snapshots.sh
src/: App.svelte  DcDownloadHarness.svelte  Prefs.svelte  ToolbarHarness.svelte  dc-download-harness.ts  main.ts  prefs.ts  tauri-plugin-os.d.ts  toolbar-harness.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.macos.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libdc-cmake/: CMakeLists.txt
src-tauri/libdc-cmake/include/: libdivecomputer.h
src-tauri/plugins/dc-ble/: Cargo.toml
src-tauri/plugins/dc-ble/android/: .gitignore  build.gradle.kts
src-tauri/plugins/dc-ble/android/src/main/: AndroidManifest.xml
src-tauri/plugins/dc-ble/android/src/main/java/com/decco/app/dcble/: BleConstants.kt  BleGattClient.kt  DcBlePlugin.kt
src-tauri/plugins/dc-ble/android/src/main/java/org/subsurfacedivelog/prototype/dcble/: BleConstants.kt  BleGattClient.kt  DcBlePlugin.kt
src-tauri/plugins/dc-ble/android/src/test/java/com/decco/app/dcble/: BleGattClientTest.kt
src-tauri/plugins/dc-ble/android/src/test/java/org/subsurfacedivelog/prototype/dcble/: BleGattClientTest.kt
src-tauri/plugins/dc-ble/src/: error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: cloud.rs  lib.rs  menu.rs  state.rs  types.rs
src-tauri/src/cloud/: mod.rs  sync.rs
src-tauri/src/dc/: commands.rs  context.rs  descriptor.rs  device.rs  ffi.rs  fingerprint.rs  merge.rs  mod.rs  parser.rs  transport.rs  writer.rs
src-tauri/src/dc/transport/: ble.rs  mod.rs
src-tauri/src/ssrf_git/: mod.rs  parse_dive.rs  parse_divecomputer.rs  parse_header.rs  parse_site.rs  settings.rs  tokenize.rs
src/lib/: dcConnections.ts  diveListColumns.ts  format.ts  prefs.ts  swipePanel.ts  types.ts  units.ts
src/lib/components/: CloudLoginDialog.svelte  ColumnPicker.svelte  DcDownloadDialog.svelte  DiveList.svelte  DiveProfile.svelte  InfoPanel.svelte  MapPanel.svelte  MenuBar.svelte  MobileLayout.svelte  MobileSettingsScreen.svelte  QuadrantGrid.svelte  StatusBar.svelte  TitleBar.svelte  Toolbar.svelte
src/lib/components/info/: EquipmentTab.svelte  InformationTab.svelte  NotesTab.svelte  SummaryTab.svelte
src/lib/components/prefs/: AppearanceSection.svelte  DcDownloadSection.svelte  LoggingSection.svelte  PrefsShell.svelte  PrefsSidebar.svelte  RecentsSection.svelte
src/lib/fixtures/: logbook.sample.json
src/lib/map/: cachedTileLayer.ts
src/lib/profile/: profile-scale.ts
src/lib/ssrf-git/: index.ts  parse-dive.ts  parse-divecomputer.ts  parse-header.ts  parse-site.ts  parse-trip.ts  tokenize.ts
src/lib/stores/: app.svelte.ts
src/lib/styles/: tokens.css
test/: DcDownloadDialog.test.ts  smoke.test.ts
test/__mocks__/: tauri-plugin-os.ts
test/components/: App.desktop.test.ts  App.mobile.test.ts  CloudLoginDialog.test.ts  ColumnPicker.test.ts  DiveList.test.ts  DiveProfile.test.ts  InfoPanel.test.ts  MapPanel.test.ts  MenuBar.test.ts  MobileLayout.test.ts  MobileSettingsScreen.test.ts  QuadrantGrid.test.ts  StatusBar.test.ts  TitleBar.test.ts  Toolbar.test.ts  app-integration.test.ts
test/components/prefs/: AppearanceSection.test.ts  DcDownloadSection.test.ts  LoggingSection.test.ts  RecentsSection.test.ts
test/fixtures/git-tree-trips/: 00-Subsurface
test/fixtures/git-tree-trips/01-Divesites/: Site-04782ed8
test/fixtures/git-tree-trips/2024/03/22-Mon-09=00=00/: Dive-001  Divecomputer
test/fixtures/git-tree-trips/2024/06/10-Egypt/: 00-Trip
test/fixtures/git-tree-trips/2024/06/10-Egypt/10-Mon-10=00=00/: Dive-002  Divecomputer
test/fixtures/git-tree-trips/2024/06/10-Egypt/11-Tue-09=30=00/: Dive-003  Divecomputer
test/fixtures/git-tree/2024/03/15-Fri-12=28=43/: Dive-001  Divecomputer
test/fixtures/git-tree/2024/03/15-Fri-12=28=43/Pictures/: +00=00=05  +00=01=30
test/lib/: cachedTileLayer.test.ts  dcConnections.test.ts  diveListColumns.test.ts  prefs.test.ts  swipePanel.test.ts  units.test.ts
test/profile/: profile-scale.test.ts
test/ssrf-git/: parse-dive.test.ts  parse-divecomputer.test.ts  parse-logbook.test.ts  parse-meta.test.ts  tokenize.test.ts
test/stores/: app.test.ts  logbook-load.test.ts
test/visual/: dc-download.spec.ts  fixtures.ts  main-app.spec.ts  mobile-dots.spec.ts  prefs.spec.ts  tauri-mock.ts  toolbar.spec.ts  units.spec.ts
