[package]
name = "subsurface-prototype"
version = "0.1.0"
description = "Tauri prototype of the Subsurface dive-log application"
authors = ["Attila Gobi <attila.gobi@gmail.com>"]
license = "GPL-2.0"
repository = "https://github.com/agobi/subsurface-tauri"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
git2 = { version = "0.20", default-features = false, features = ["https"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
