[package]
name = "decco"
version = "0.1.0"
description = "Decco — a Tauri dive-log viewer for Subsurface's git-based logbook format"
authors = ["Attila Gobi <attila.gobi@gmail.com>"]
license = "GPL-2.0"
repository = "https://github.com/agobi/subsurface-tauri"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
bindgen = "0.70"
cmake = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
git2 = { version = "0.21", default-features = false, features = ["https"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
serialport = "4"
sha1 = "0.11"

[target.'cfg(not(target_os = "android"))'.dependencies]
btleplug = "0.12"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
security-framework-sys = "2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
# openssl-sys 0.9.x build script is incompatible with mkinstallvars.pl changes
# introduced in OpenSSL 3.6 — pin to 3.5.x until openssl-sys is updated
openssl-src = ">=300.0.14, <400.1"

[target.'cfg(target_os = "android")'.dependencies]
git2 = { version = "0.21", default-features = false, features = ["vendored-openssl"] }
dc-ble = { path = "plugins/dc-ble" }

[dev-dependencies]
tauri = { version = "2.11.3", features = ["test"] }
